--- a/package.json
+++ b/package.json
@@ -27,5 +27,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "immutable": "^4.0.0-rc.12",
+    "react-immutable": "^0.1.3",
+    "react-redux": "^7.0.3",
+    "react-transition-group": "^4.0.1",
+    "redux": "^4.0.1",
+    "redux-immutable": "^4.0.0",
+    "styled-components": "^4.2.0"
   }
 }
